--- a/style.css
+++ b/style.css
@@ -41,8 +41,56 @@ body {
   width: 100px;
 }
 
-.cpu-result {
+/** Permite rotar las imagenes*/
+
+.user-result img {
   border: 1px solid black;
-  width: 400px;
-  height: 400px;
+  transform: rotate(90deg);
+}
+.cpu-result img {
+  border: 1px solid black;
+  /* width: 400px;
+  height: 400px; */
+  transform: rotate(-90deg) rotateY(180deg);
+}
+
+.result {
+  text-align: center;
+  font-size: 2rem;
+  color: #7d2ae8;
+  margin-top: 0.5rem;
+}
+
+.option-images {
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  /* margin-top: 0.5rem; */
+  justify-content: space-between;
+  opacity: 0.5;
+}
+
+.option-image {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  opacity: 0.5;
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+}
+.option-image:hover {
+  opacity: 1;
+}
+
+.option-image img {
+  pointer-events: none;
+  width: 50px;
+  height: 50px;
+}
+
+.option-image p {
+  color: #7d2ae8;
+  font-size: 1.235rem;
+  margin-top: 1rem;
+  pointer-events: none;
 }
